tests/type_errors/sort_tuples.nos
# expect: [(1, "a"), (2, "b"), (3, "c")]
# Tuples auto-derive Ord (element-by-element comparison)
main() = [(2, "b"), (1, "a"), (3, "c")].sort()
